--- a/k8s/dev-deployment.yml
+++ b/k8s/dev-deployment.yml
@@ -18,3 +18,17 @@ spec:
         image: nginx
         ports:
         - containerPort: 80  
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: dev-service
+  namespace: dev
+spec:
+  type: NodePort
+  selector:
+    app: nginx
+  ports:
+    - port: 80
+      targetPort: 80
+      nodePort: 30007
