--- a/k8s/qa-deployment.yml
+++ b/k8s/qa-deployment.yml
@@ -18,3 +18,17 @@ spec:
         image: ravi2krishna/login-2435
         ports:
         - containerPort: 80  
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: qa-service
+  namespace: qa
+spec:
+  type: NodePort
+  selector:
+    app: nginx
+  ports:
+    - port: 80
+      targetPort: 80
+      nodePort: 30008
